more boards, fixed previewing certain boards

--- a/options.html
+++ b/options.html
@@ -3,6 +3,11 @@
   <head>
     <title>LiTheme</title>
     <style>
+
+      body {
+        background-color: #393834;
+      }
+
       #options {
         font-family: Arial, sans-serif;
         display:flex;
@@ -230,8 +235,8 @@
         background-repeat: no-repeat;
         position: absolute;
         background-size:contain;
-
-        top: 100px
+        top: 100px;
+        border-radius: 3px;
       }
 
     </style>
@@ -283,10 +288,11 @@
         <select id="boardTheme">
             <option value="none">None</option>
             <option value="blue">Blue</option>
+            <option value="ncf-board">NCF</option>
             <option value="blue2">Blue 2</option>
             <option value="blue3">Blue 3</option>
             <option value="blue-marble">Blue marble</option>
-            <option value="canvas">Canvas</option>
+            <option value="canvas2">Canvas</option>
             <option value="wood">Wood</option>
             <option value="wood2">Wood 2</option>
             <option value="wood3">Wood 3</option>
@@ -303,8 +309,8 @@
             <option value="olive">Olive</option>
             <option value="newspaper">Newspaper</option>
             <option value="purple">Purple</option>
-            <option value="purplediag">Purple diag</option>
-            <option value="pink">Pink</option>
+            <option value="purple-diag">Purple diag</option>
+            <option value="pink-pyramid">Pink</option>
             <option value="ic">IC</option>
             <option value="horsey">Horsey</option>
 
